integration-tests/src/test-cases/parse-error-open-square-bracket/expected
parse error: from "test-cases/parse-error-open-square-bracket/input", line 1:
| [
|  ^
|
+-> Syntax error: while parsing list-expression, unexpected end of input while expecting ' ', '!', '$', '(', '.', '[', '\n', ']', 'f', 'l', 'm', 'q', or '{'

